roueter: make up all routes gih.http: add routes
